--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,7 @@ repositories {
 
     maven { url = 'https://maven.pedropathing.com' }
     maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url = 'https://maven.brott.dev/' }
 
 }
 
@@ -24,5 +25,8 @@ dependencies {
     implementation 'com.pedropathing:telemetry:0.0.6'
 
     implementation "com.bylazar:fullpanels:1.0.6"
+
+    // for FTC Dashboard
+    implementation 'com.acmerobotics.dashboard:dashboard:0.5.0'
 }
 
