--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,11 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+
+    maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url = "https://maven.pedropathing.com"}
+    maven { url = "https://maven.brott.dev/"}
+    maven { url = "https://jitpack.io"}
 }
 
 dependencies {
@@ -13,5 +18,10 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.pedropathing:ftc:2.0.4'
+    implementation 'com.pedropathing:telemetry:1.0.0'
+    implementation 'com.bylazar:fullpanels:1.0.6'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.5.0'
+    implementation 'com.github.StateFactory-Dev:StateFactory:0.3.9'
 }
 
